# liteplayer_open

adapter/: sink_alsa_wrapper.c
example/esp32/components/liteplayeradapter/: CMakeLists.txt
example/esp32/components/liteplayercore/: CMakeLists.txt  dummy.c
example/unix/: CMakeLists.txt
